--- a/MiGFury_1stEdition.cbp
+++ b/MiGFury_1stEdition.cbp
@@ -22,6 +22,7 @@
 					<Add directory="src/Animation" />
 					<Add directory="src/Physic" />
 					<Add directory="src" />
+					<Add directory="src/Core/System" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -40,6 +41,7 @@
 					<Add directory="src/Animation" />
 					<Add directory="src/Physic" />
 					<Add directory="src" />
+					<Add directory="src/Core/System" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -65,6 +67,8 @@
 		<Unit filename="src/Core/sound.cpp" />
 		<Unit filename="src/Core/sound.h" />
 		<Unit filename="src/Core/structs.h" />
+		<Unit filename="src/Core/title.cpp" />
+		<Unit filename="src/Core/title.h" />
 		<Unit filename="src/Graphics/draw.cpp" />
 		<Unit filename="src/Graphics/draw.h" />
 		<Unit filename="src/Graphics/text.cpp" />
